# public

./: README.md
code/MOSTester/app/: build.gradle
code/MOSTester/gradle/wrapper/: gradle-wrapper.properties
code/MOSTester_Network/aars/: build.gradle
code/MOSTester_Network/app/: build.gradle
code/MOSTester_Network/gradle/wrapper/: gradle-wrapper.properties
code/MOSTester_Network/models/: assets.xml
code/SpeechPlayer/app/: build.gradle
code/SpeechPlayer/gradle/wrapper/: gradle-wrapper.properties
code/misc/codec_print/: codec.py  pcm.py
code/misc/downsampler/: main.py
code/misc/ethereum_contracts/: truffle.js
code/misc/ethereum_contracts/contracts/: Auth.sol  ERC735.sol  (+2 more)
code/misc/machine_learning/: .gitignore  fread.py  liveplot.py  main_ae.py  main_aeneat.py  main_cycle_gan.py  main_dcnn.py  main_fft.py  main_kiss.py  main_lstm.py  main_neat.py  main_pesq.py  main_simpleae.py  main_tcn.py  main_torch.py  pesqnet.py  plot.py
code/misc/sandbox/: CMakeLists.txt  codec.pd  compile.sh  oscilator.pd  output~.pd  run.sh
code/misc/sandbox/include/: wav.hpp
code/misc/sandbox/src/: server.cpp  wav.cpp
code/misc/sandbox/src/1bit/: decoder.cpp  encoder.cpp
code/misc/sandbox/src/2bit/: decoder.cpp  encoder.cpp
code/misc/sandbox/src/alaw/: decoder.cpp  encoder.cpp
code/misc/sandbox/src/f2ch/: decoder.cpp  encoder.cpp
code/misc/sandbox/src/mulaw/: decoder.cpp  encoder.cpp
code/pystt/: codec.py
code/sttts_server/: convert.sh  delete_this.sh  out  phrases.py  server.py  stt.py  tts.py
code/sttts_server/words/: __init__.py  adjectives.py  conjunctions.py  nouns.py  prepositions.py  questions.py  relatives.py  verbs.py  words.py
(+211 files in other folders)
